objects/ssot__ApplicationReviewParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationReviewId__c</fullName>
        <label>Application Review</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Review Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantRole__c</fullName>
        <label>Participant Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227419231_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationReviewParticipant_Applica_rel</label>
        <referenceTo>ssot__ApplicationReview__dlm</referenceTo>
        <relationshipLabel>ApplicationReviewParticipant_Applica_rel</relationshipLabel>
        <relationshipName>rel_1729227419231_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227482535_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationReviewParticipant_Partici_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ApplicationReviewParticipant_Partici_rel</relationshipLabel>
        <relationshipName>rel_1729227482535_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>